--- a/css/student/student-dark.css
+++ b/css/student/student-dark.css
@@ -40,6 +40,7 @@ nav .nav-back {
 
 nav .nav-back i {
   font-size: 14px;
+  font-weight: 600;
 }
 
 nav .nav-user {
@@ -53,8 +54,10 @@ nav .nav-user:focus-within .user-dropdown {
   z-index: 1;
 }
 
-nav .nav-user i.fa-user {
+nav .nav-user i.fa-user-circle {
   display: none;
+  color: #222;
+  font-size: 20px;
 }
 
 nav .nav-user .user-dropdown {
@@ -88,8 +91,7 @@ nav .nav-user .user-dropdown button {
 nav .nav-user .user-dropdown a:active, nav .nav-user .user-dropdown a:focus,
 nav .nav-user .user-dropdown button:active,
 nav .nav-user .user-dropdown button:focus {
-  background: #222;
-  color: white;
+  background: #f2f2f2;
 }
 
 nav .nav-user .user-dropdown hr {
@@ -212,7 +214,7 @@ nav img {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 12px 16px 16px 16px;
+  padding: 12px 16px 24px 16px;
   border: 1px solid #dadada;
   border-radius: 16px;
   text-align: left;
@@ -227,6 +229,7 @@ nav img {
 .card .col a.view-request {
   height: 35px;
   width: 35px;
+  margin-top: -10px;
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -274,6 +277,7 @@ nav img {
 }
 
 .card button {
+  margin-bottom: 10px;
   padding: 6px 12px;
   border-radius: 8px;
   align-self: flex-end;
@@ -283,12 +287,12 @@ nav img {
 }
 
 .card.request {
-  padding: 32px 36px 36px 36px;
+  padding: 24px 32px 16px 32px;
 }
 
 .card.request {
   min-height: 200px;
-  width: 300px;
+  width: 250px;
   justify-content: unset;
   align-items: unset;
 }
@@ -406,7 +410,7 @@ nav img {
   nav .nav-user {
     right: 20px;
   }
-  nav .nav-user i.fa-user {
+  nav .nav-user i.fa-user-circle {
     display: block;
   }
   nav .nav-user .fa-caret-down {
@@ -422,8 +426,7 @@ nav img {
     align-items: center;
   }
   .card.request {
-    width: 250px;
-    padding: 24px 32px 28px 32px;
+    padding: 28px 28px 20px 28px;
   }
   a.view-request,
   button {
@@ -439,6 +442,12 @@ nav img {
   button:focus-within {
     background: #eee !important;
   }
+  footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 10vh;
+  }
 }
 
 body {
@@ -450,8 +459,12 @@ nav {
   transition: 0.1 ease-out;
 }
 
+.section {
+  opacity: 0;
+}
+
 .container {
-  height: calc(100% - 81px - 100px - 10vh);
+  min-height: calc(100% - 81px - 100px - 10vh);
   margin-top: 40px;
   padding-bottom: 100px;
   display: flex;
@@ -514,6 +527,10 @@ body.dark nav {
 
 body.dark nav .user-dropdown {
   border-color: #444 !important;
+}
+
+body.dark nav .user-dropdown button:active, body.dark nav .user-dropdown button:focus {
+  background: #333;
 }
 
 body.dark nav .user-dropdown hr {
