--- a/css/student/_cards.scss
+++ b/css/student/_cards.scss
@@ -12,7 +12,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 12px 16px 16px 16px;
+  padding: 12px 16px 24px 16px;
   border: 1px solid #dadada;
   border-radius: 16px;
   text-align: left;
@@ -24,6 +24,7 @@
     a.view-request {
       height: 35px;
       width: 35px;
+      margin-top: -10px;
       border-radius: 50%;
       display: flex;
       justify-content: center;
@@ -59,13 +60,13 @@
   &:hover a.view-request,
   &:focus-within a.view-request {
     opacity: 1;
-
     i {
       font-size: 14px;
     }
   }
 
   button {
+    margin-bottom: 10px;
     padding: 6px 12px;
     border-radius: 8px;
     align-self: flex-end;
@@ -76,12 +77,12 @@
 }
 
 .card.request {
-  padding: 32px 36px 36px 36px;
+  padding: 24px 32px 16px 32px;
 }
 
 .card.request {
   min-height: 200px;
-  width: 300px;
+  width: 250px;
   justify-content: unset;
   align-items: unset;
 
