--- a/css/student/_mobile.scss
+++ b/css/student/_mobile.scss
@@ -27,7 +27,7 @@
     }
   }
   .container {
-    margin: 50px 0 0 0 !important;
+    margin-top: calc(71px + 30px) !important;
     padding: 0 0 100px 0;
     flex-direction: column;
     align-items: center;
@@ -55,5 +55,4 @@
     align-items: center;
     height: 10vh;
   }
-
 }
