--- a/css/student/_nav.scss
+++ b/css/student/_nav.scss
@@ -1,14 +1,15 @@
 @import "../mixin";
 
 nav {
+  width: 100%;
   height: 70px;
-  padding: 0 150px;
   background: white;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-bottom: 1px solid #eee;
-
+  border-bottom: 1px solid #ddd;
+  position: fixed;
+  top: 0px;
   a,
   label {
     @include poppins;
