--- a/css/student/student-dark.css
+++ b/css/student/student-dark.css
@@ -9,13 +9,15 @@
 }
 
 nav {
+  width: 100%;
   height: 70px;
-  padding: 0 150px;
   background: white;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid #ddd;
+  position: fixed;
+  top: 0px;
 }
 
 nav a,
@@ -420,7 +422,7 @@ nav img {
     margin: 220px 0 0 -140px;
   }
   .container {
-    margin: 50px 0 0 0 !important;
+    margin-top: calc(71px + 30px) !important;
     padding: 0 0 100px 0;
     flex-direction: column;
     align-items: center;
@@ -450,6 +452,22 @@ nav img {
   }
 }
 
+.fab {
+  padding: 12px;
+  position: fixed;
+  right: 40px;
+  bottom: 40px;
+  background: dodgerblue;
+  border-radius: 50%;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  z-index: 99;
+}
+
+.fab i {
+  color: white;
+  font-size: 24px;
+}
+
 body {
   height: 100vh;
 }
@@ -465,7 +483,7 @@ nav {
 
 .container {
   min-height: calc(100% - 81px - 100px - 10vh);
-  margin-top: 40px;
+  margin-top: calc(71px + 40px);
   padding-bottom: 100px;
   display: flex;
   justify-content: center;
