--- a/css/student/student.scss
+++ b/css/student/student.scss
@@ -5,6 +5,7 @@
 @import "cards";
 @import "request-view";
 @import "mobile";
+@import "fab";
 
 body {
   height: 100vh;
@@ -21,7 +22,7 @@ nav {
 
 .container {
   min-height: calc(100% - 81px - 100px - 10vh);
-  margin-top: 40px;
+  margin-top: calc(71px + 40px);
   padding-bottom: 100px;
   display: flex;
   justify-content: center;
