--- a/css/student/_fab.scss
+++ b/css/student/_fab.scss
@@ -1,14 +1,67 @@
-.fab {
-  padding: 12px;
-  position: fixed;
-  right: 40px;
-  bottom: 40px;
-  background: dodgerblue;
-  border-radius: 50%;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  z-index: 99;
-  i {
-    color: white;
-    font-size: 24px;
+.fab-container {
+  .fab {
+    width: 48px;
+    padding: 12px;
+    display: flex;
+    align-items: center;
+    position: fixed;
+    right: 40px;
+    bottom: 40px;
+    background: dodgerblue;
+    border-radius: 50%;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+    z-index: 99;
+    transition: 0.25s ease-out;
+
+    span {
+      margin-left: 12px;
+      color: white;
+      z-index: -1;
+      opacity: 0;
+    }
+    &.expanded {
+      padding: 12px 136px 12px 16px;
+      border-radius: 12px;
+      span {
+        z-index: 1;
+        opacity: 1;
+      }
+    }
+    i {
+      color: white;
+      font-size: 24px;
+    }
+  }
+  .fab-actions {
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+    position: fixed;
+    right: 40px;
+    bottom: 110px;
+    transform: translateY(50px);
+    z-index: -1;
+    opacity: 0;
+    transition: 0.15s ease-out;
+    &.shown {
+      transform: translateY(0px);
+      z-index: 1;
+      opacity: 1;
+      button span {
+        color: black !important;
+      }
+    }
+    button {
+      width: max-content;
+      align-self: flex-end;
+      padding: 8px 16px;
+      border-radius: 16px 16px 6px 16px;
+      box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5), 0px 0px 1px rgba(0, 0, 0, 0.1);
+      opacity: 0;
+      span {
+        font-size: 15px;
+        color: white;
+      }
+    }
   }
 }
