--- a/css/student/student-dark.css
+++ b/css/student/student-dark.css
@@ -427,22 +427,22 @@ nav img {
     flex-direction: column;
     align-items: center;
   }
-  .card.request {
-    padding: 28px 28px 20px 28px;
-  }
-  a.view-request,
-  button {
+  .card a.view-request,
+  .card button {
     background: #f2f2f2 !important;
     opacity: 1 !important;
   }
-  a.view-request i,
-  button i {
+  .card a.view-request i,
+  .card button i {
     font-size: 14px !important;
   }
-  a.view-request:focus, a.view-request:focus-within,
-  button:focus,
-  button:focus-within {
+  .card a.view-request:focus, .card a.view-request:focus-within,
+  .card button:focus,
+  .card button:focus-within {
     background: #eee !important;
+  }
+  .card.request {
+    padding: 28px 28px 20px 28px;
   }
   footer {
     display: flex;
@@ -452,20 +452,78 @@ nav img {
   }
 }
 
-.fab {
+.fab-container .fab {
+  width: 48px;
   padding: 12px;
+  display: flex;
+  align-items: center;
   position: fixed;
   right: 40px;
   bottom: 40px;
   background: dodgerblue;
   border-radius: 50%;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
   z-index: 99;
+  transition: 0.25s ease-out;
 }
 
-.fab i {
+.fab-container .fab span {
+  margin-left: 12px;
+  color: white;
+  z-index: -1;
+  opacity: 0;
+}
+
+.fab-container .fab.expanded {
+  padding: 12px 136px 12px 16px;
+  border-radius: 12px;
+}
+
+.fab-container .fab.expanded span {
+  z-index: 1;
+  opacity: 1;
+}
+
+.fab-container .fab i {
   color: white;
   font-size: 24px;
+}
+
+.fab-container .fab-actions {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  position: fixed;
+  right: 40px;
+  bottom: 110px;
+  transform: translateY(50px);
+  z-index: -1;
+  opacity: 0;
+  transition: 0.15s ease-out;
+}
+
+.fab-container .fab-actions.shown {
+  transform: translateY(0px);
+  z-index: 1;
+  opacity: 1;
+}
+
+.fab-container .fab-actions.shown button span {
+  color: black !important;
+}
+
+.fab-container .fab-actions button {
+  width: max-content;
+  align-self: flex-end;
+  padding: 8px 16px;
+  border-radius: 16px 16px 6px 16px;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5), 0px 0px 1px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+}
+
+.fab-container .fab-actions button span {
+  font-size: 15px;
+  color: white;
 }
 
 body {
