--- a/css/student/_fab.scss
+++ b/css/student/_fab.scss
@@ -9,24 +9,30 @@
     bottom: 40px;
     background: dodgerblue;
     border-radius: 50%;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
     z-index: 99;
     transition: 0.25s ease-out;
-
+    &:hover {
+      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.5);
+    }
+    &.expanded {
+      padding: 12px 136px 12px 16px;
+      border-radius: 16px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+      span {
+        z-index: 1;
+        opacity: 1;
+        display: block;
+      }
+    }
     span {
       margin-left: 12px;
       color: white;
       z-index: -1;
       opacity: 0;
+      pointer-events: none;
+      display: none;
     }
-    &.expanded {
-      padding: 12px 136px 12px 16px;
-      border-radius: 12px;
-      span {
-        z-index: 1;
-        opacity: 1;
-      }
-    }
+
     i {
       color: white;
       font-size: 24px;
@@ -56,7 +62,7 @@
       align-self: flex-end;
       padding: 8px 16px;
       border-radius: 16px 16px 6px 16px;
-      box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5), 0px 0px 1px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25);
       opacity: 0;
       span {
         font-size: 15px;
