--- a/css/student/_home.scss
+++ b/css/student/_home.scss
@@ -1,22 +1,21 @@
-.container {
-  .button.card {
-    height: 150px;
-    width: 150px;
-    display: flex;
-    flex-direction: column;
-    row-gap: 12px;
-    animation: scale-down-center 0.1s ease-in both;
-    i {
-      font-size: 28px;
-      font-weight: 300;
-    }
-    &:hover,
-    &:focus {
-      animation: scale-up-center 0.1s ease-out both;
-    }
-    &:focus {
-      border-color: #888;
-    }
+.button.card {
+  height: 150px;
+  width: 150px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 12px;
+  z-index: 0;
+  animation: scale-down-center 0.1s ease-in both;
+  i {
+    font-size: 28px;
+    font-weight: 300;
+  }
+  &:hover,
+  &:focus {
+    animation: scale-up-center 0.1s ease-out both;
+  }
+  &:focus {
+    border-color: #888;
   }
 }
 
