--- a/css/student/student.css
+++ b/css/student/student.css
@@ -54,6 +54,7 @@ nav .nav-user:focus-within .user-dropdown {
   animation: slide-down 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   opacity: 1;
   z-index: 1;
+  pointer-events: unset;
 }
 
 nav .nav-user i.fa-user-circle {
@@ -69,11 +70,12 @@ nav .nav-user .user-dropdown {
   display: flex;
   flex-direction: column;
   position: absolute;
-  background: #fff;
+  background: white;
   border: 1px solid #dadada;
   border-radius: 8px;
   opacity: 0;
-  z-index: -1;
+  z-index: 1;
+  pointer-events: none;
   animation: slide-up 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   transition: 0.1s ease-out;
 }
@@ -162,25 +164,26 @@ nav img {
   }
 }
 
-.container .button.card {
+.button.card {
   height: 150px;
   width: 150px;
   display: flex;
   flex-direction: column;
   row-gap: 12px;
+  z-index: 0;
   animation: scale-down-center 0.1s ease-in both;
 }
 
-.container .button.card i {
+.button.card i {
   font-size: 28px;
   font-weight: 300;
 }
 
-.container .button.card:hover, .container .button.card:focus {
+.button.card:hover, .button.card:focus {
   animation: scale-up-center 0.1s ease-out both;
 }
 
-.container .button.card:focus {
+.button.card:focus {
   border-color: #888;
 }
 
@@ -422,10 +425,14 @@ nav img {
     margin: 220px 0 0 -140px;
   }
   .container {
+    min-height: calc(100vh - 71px - 30px - 10vh) !important;
     margin-top: calc(71px + 30px) !important;
-    padding: 0 0 100px 0;
+    padding-bottom: 0 !important;
     flex-direction: column;
     align-items: center;
+  }
+  .container.row {
+    padding-bottom: 100px !important;
   }
   .card a.view-request,
   .card button {
@@ -462,9 +469,24 @@ nav img {
   bottom: 40px;
   background: dodgerblue;
   border-radius: 50%;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
   z-index: 99;
   transition: 0.25s ease-out;
+}
+
+.fab-container .fab:hover {
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.5);
+}
+
+.fab-container .fab.expanded {
+  padding: 12px 136px 12px 16px;
+  border-radius: 16px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+}
+
+.fab-container .fab.expanded span {
+  z-index: 1;
+  opacity: 1;
+  display: block;
 }
 
 .fab-container .fab span {
@@ -472,16 +494,8 @@ nav img {
   color: white;
   z-index: -1;
   opacity: 0;
-}
-
-.fab-container .fab.expanded {
-  padding: 12px 136px 12px 16px;
-  border-radius: 12px;
-}
-
-.fab-container .fab.expanded span {
-  z-index: 1;
-  opacity: 1;
+  pointer-events: none;
+  display: none;
 }
 
 .fab-container .fab i {
@@ -517,7 +531,7 @@ nav img {
   align-self: flex-end;
   padding: 8px 16px;
   border-radius: 16px 16px 6px 16px;
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5), 0px 0px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25);
   opacity: 0;
 }
 
@@ -526,8 +540,48 @@ nav img {
   color: white;
 }
 
-body {
-  height: 100vh;
+.scroll-btn {
+  height: 30px;
+  width: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 50px;
+  background: #fff;
+  border-radius: 50%;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.75);
+  opacity: 0;
+  z-index: -1;
+  pointer-events: none;
+  animation: scale-down 0.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
+
+.scroll-btn.shown {
+  opacity: 1;
+  z-index: 98;
+  pointer-events: unset;
+  animation: scale-up 0.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
+
+@keyframes scale-up {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes scale-down {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
 }
 
 body,
@@ -540,7 +594,7 @@ nav {
 }
 
 .container {
-  min-height: calc(100% - 81px - 100px - 10vh);
+  min-height: calc(100vh - 71px - 100px - 10vh);
   margin-top: calc(71px + 40px);
   padding-bottom: 100px;
   display: flex;
@@ -550,7 +604,6 @@ nav {
 }
 
 .container.center {
-  min-height: 70vh;
   align-items: center;
 }
 
