Minor bug fixes

--- a/css/login.css
+++ b/css/login.css
@@ -4,12 +4,16 @@
 }
 
 .container {
-  height: 96vh;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   row-gap: 40px;
+}
+
+.container div {
+  display: none !important;
 }
 
 .inti-logo {
