--- a/css/student/_fab.scss
+++ b/css/student/_fab.scss
@@ -62,6 +62,7 @@
       align-self: flex-end;
       padding: 8px 16px;
       border-radius: 16px 16px 6px 16px;
+      background: white;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25);
       opacity: 0;
       span {
