--- a/css/student/student-dark.css
+++ b/css/student/student-dark.css
@@ -18,6 +18,7 @@ nav {
   border-bottom: 1px solid #ddd;
   position: fixed;
   top: 0px;
+  z-index: 99;
 }
 
 nav a,
@@ -602,6 +603,7 @@ nav img {
   align-self: flex-end;
   padding: 8px 16px;
   border-radius: 16px 16px 6px 16px;
+  background: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25);
   opacity: 0;
 }
