--- a/css/student/_home.scss
+++ b/css/student/_home.scss
@@ -1,8 +1,10 @@
 .button.card {
   height: 150px;
   width: 150px;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: repeat(2, max-content);
+  justify-items: center;
+  align-content: center;
   row-gap: 12px;
   z-index: 0;
   animation: scale-down-center 0.1s ease-in both;
