--- a/css/student/_mobile.scss
+++ b/css/student/_mobile.scss
@@ -1,5 +1,12 @@
 @media only screen and (max-width: 768px) {
+  * {
+    -webkit-tap-highlight-color: transparent !important;
+  }
   nav {
+    height: 60px;
+    .logo, img {
+      width: 90px;
+    }
     .nav-back,
     .nav-username {
       span {
@@ -22,16 +29,18 @@
         display: none;
       }
       .user-dropdown {
-        margin: 220px 0 0 -140px;
+        right: 0px;
       }
     }
   }
   .container {
-    min-height: calc(100vh - 71px - 30px - 10vh) !important;
+    min-height: calc(100vh - 61px - 30px - 10vh) !important;
     margin-top: calc(71px + 30px) !important;
     padding-bottom: 0 !important;
-    flex-direction: column;
-    align-items: center;
+    grid-template-columns: min-content !important;
+    grid-template-rows: max-content max-content !important;
+    &.center {
+    }
     &.row {
       padding-bottom: 100px !important;
     }
@@ -50,8 +59,23 @@
       }
     }
   }
-  .card.request {
+  .card.form {
+    width: 220px !important;
     padding: 28px 28px 20px 28px;
+  }
+
+  /*
+ * Request view (payment)
+*/
+
+  .payment {
+    margin-bottom: 100px;
+    padding: 0px !important;
+    .payment-info {
+      img {
+        height: 40px;
+      }
+    }
   }
 
   footer {
