Removed border under navigation bar

--- a/css/student/_cards.scss
+++ b/css/student/_cards.scss
@@ -76,7 +76,8 @@
   }
 }
 
-.card.form, .card.request {
+.card.form,
+.card.request {
   min-height: 200px;
   width: 250px;
   padding: 24px 32px 16px 32px;
