--- a/css/student/_nav.scss
+++ b/css/student/_nav.scss
@@ -7,7 +7,7 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  border-bottom: 1px solid #ddd;
+  // border-bottom: 1px solid #ddd;
   position: fixed;
   top: 0px;
   z-index: 99;
