Fixed dark mode

--- a/css/student/student-dark.css
+++ b/css/student/student-dark.css
@@ -1,760 +1,9 @@
-@font-face {
-  font-family: Europa;
-  src: url("/fonts/europa.woff");
-}
-
-@font-face {
-  font-family: Europa;
-  src: url("/fonts/europa.woff");
-}
-
-nav {
-  width: 100%;
-  height: 70px;
-  background: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  top: 0px;
-  z-index: 99;
-}
-
-nav a,
-nav label {
-  font-family: "Poppins", sans-serif;
-}
-
-nav .nav-back,
-nav .nav-user {
-  height: 70px;
-  width: 100px;
-  display: grid;
-  grid-template-columns: repeat(2, max-content);
-  justify-content: center;
-  align-items: center;
-  column-gap: 16px;
-  position: absolute;
-}
-
-nav .nav-back {
-  left: 150px;
-}
-
-nav .nav-back i {
-  font-size: 14px;
-  font-weight: 600;
-}
-
-nav .nav-user {
-  right: 150px;
-}
-
-nav .nav-user:hover .user-dropdown,
-nav .nav-user:focus-within .user-dropdown {
-  animation: slide-down 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  opacity: 1;
-  z-index: 1;
-  pointer-events: unset;
-}
-
-nav .nav-user i.fa-user-circle {
-  display: none;
-  color: #222;
-  font-size: 20px;
-}
-
-nav .nav-user .user-dropdown {
-  width: max-content;
-  top: 60px;
-  padding: 12px 12px 16px 12px;
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  background: white;
-  border: 1px solid #dadada;
-  border-radius: 8px;
-  opacity: 0;
-  z-index: 1;
-  pointer-events: none;
-  animation: slide-up 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  transition: 0.1s ease-out;
-}
-
-nav .nav-user .user-dropdown label {
-  padding: 2px 4px;
-  font-size: 14px;
-  color: #888;
-}
-
-nav .nav-user .user-dropdown a,
-nav .nav-user .user-dropdown button {
-  padding: 4px 4px;
-  border-radius: 4px;
-}
-
-nav .nav-user .user-dropdown a:active, nav .nav-user .user-dropdown a:focus,
-nav .nav-user .user-dropdown button:active,
-nav .nav-user .user-dropdown button:focus {
-  background: #f2f2f2;
-}
-
-nav .nav-user .user-dropdown hr {
-  height: 1px;
-  margin: 6px 0;
-  background: #ddd;
-  border: none;
-}
-
-nav .nav-user .user-dropdown i.fad {
-  width: 20px;
-  margin: 0 8px;
-  font-size: 16px;
-  transition: 0.3s ease-out !important;
-  transform: translateY(6px);
-  opacity: 0;
-}
-
-nav .nav-user .user-dropdown i.fad.shown {
-  transform: translateY(0px);
-  opacity: 1;
-}
-
-nav .nav-user .user-dropdown i.fad.fa-sun {
-  --fa-primary-color: #ffc24d;
-  --fa-secondary-color: orange;
-  --fa-primary-opacity: 1;
-  --fa-secondary-opacity: 1;
-}
-
-nav .nav-user .user-dropdown i.fad.fa-moon-cloud {
-  --fa-primary-color: #363548;
-  --fa-secondary-color: #f9d35f;
-  --fa-primary-opacity: 1;
-  --fa-secondary-opacity: 1;
-}
-
-nav .logo {
-  display: flex;
-}
-
-nav .logo,
-nav img {
-  width: 100px;
-}
-
-nav img {
-  pointer-events: none;
-}
-
-@keyframes slide-down {
-  0% {
-    transform: translateY(-40px);
-  }
-  100% {
-    transform: translateY(0);
-  }
-}
-
-@keyframes slide-up {
-  0% {
-    transform: translateY(0);
-  }
-  100% {
-    transform: translateY(-40px);
-  }
-}
-
-@media not all and (min-resolution: 0.001dpcm) {
-  .safari10 {
-    color: #0000ff;
-    background-color: #cccccc;
-  }
-}
-
-@media not all and (min-resolution: 0.001dpcm) {
-  .safari10 {
-    color: #0000ff;
-    background-color: #cccccc;
-  }
-}
-
-.button.card {
-  height: 150px;
-  width: 150px;
-  display: grid;
-  grid-template-rows: repeat(2, max-content);
-  justify-items: center;
-  align-content: center;
-  row-gap: 12px;
-  z-index: 0;
-  animation: scale-down-center 0.1s ease-in both;
-}
-
-.button.card i {
-  font-size: 28px;
-  font-weight: 300;
-}
-
-.button.card:hover, .button.card:focus {
-  animation: scale-up-center 0.1s ease-out both;
-}
-
-.button.card:focus {
-  border-color: #888;
-}
-
-@keyframes scale-up-center {
-  0% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(1.1);
-  }
-}
-
-@keyframes scale-down-center {
-  0% {
-    transform: scale(1.1);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-
-.heading {
-  margin-bottom: 24px;
-}
-
-.heading h2 {
-  font-size: 20px;
-}
-
-.card {
-  height: max-content;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 12px 16px 24px 16px;
-  border: 1px solid #dadada;
-  border-radius: 16px;
-  text-align: left;
-}
-
-.card .col {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.card .col a.view-request {
-  height: 35px;
-  width: 35px;
-  margin-top: -10px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  opacity: 0;
-}
-
-.card .col a.view-request i {
-  font-size: 0px;
-  transition: 0.2s ease-out;
-}
-
-.card a.view-request,
-.card button {
-  background: #eee;
-  color: #222;
-  border: 1px solid #f8f8f8;
-}
-
-.card a.view-request span,
-.card button span {
-  font-size: 14px;
-}
-
-.card a.view-request:hover,
-.card button:hover {
-  background: #eee;
-  border-color: #ccc;
-}
-
-.card a.view-request:focus,
-.card button:focus {
-  background: #fdf0f0;
-  border-color: #f9ced0;
-}
-
-.card:hover a.view-request,
-.card:focus-within a.view-request {
-  opacity: 1;
-}
-
-.card:hover a.view-request i,
-.card:focus-within a.view-request i {
-  font-size: 14px;
-}
-
-.card button {
-  margin-bottom: 10px;
-  padding: 6px 12px;
-  border-radius: 8px;
-  align-self: flex-end;
-  display: flex;
-  align-items: center;
-  column-gap: 8px;
-}
-
-.card.form,
-.card.request {
-  min-height: 200px;
-  width: 250px;
-  padding: 24px 32px 16px 32px;
-  justify-content: unset;
-  align-items: unset;
-}
-
-.card.form:focus-within,
-.card.request:focus-within {
-  border-color: #f9ced0;
-}
-
-.card.form label,
-.card.request label {
-  color: #888;
-}
-
-.card.form input,
-.card.request input {
-  margin-bottom: 20px;
-  padding: 0 0 10px 0;
-  border: none;
-  border-bottom: 1px solid #ccc;
-  transition: 0.15s ease-out;
-}
-
-.card.form input:hover,
-.card.request input:hover {
-  border-color: #fdf0f0;
-}
-
-.card.form input:focus,
-.card.request input:focus {
-  border-color: #e20c18;
-}
-
-.card.form p,
-.card.request p {
-  margin-bottom: 16px;
-}
-
-.card.form label {
-  margin-bottom: 12px;
-}
-
-.card.request label {
-  margin-bottom: 8px;
-}
-
-.payment {
-  padding: 12px 36px 0 36px;
-  display: flex;
-  flex-direction: column;
-}
-
-.payment .heading {
-  margin-bottom: 10px;
-}
-
-.payment .card {
-  display: grid;
-  grid-template-rows: 1fr 1fr;
-  margin-top: 20px;
-  margin-bottom: 30px;
-  padding: 20px 24px;
-  row-gap: 20px;
-}
-
-.payment .card .payment-info {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  justify-items: center;
-  align-items: center;
-  column-gap: 20px;
-}
-
-.payment .card .payment-info p {
-  font-family: "Poppins", sans-serif;
-  cursor: text;
-}
-
-.payment .card .payment-info a i:hover,
-.payment .card .payment-info a:focus-within i {
-  color: #e20c18;
-}
-
-.payment .card .payment-info a i {
-  color: #888;
-  font-weight: 400;
-  margin: 0 8px;
-}
-
-.payment .receipt-input {
-  padding: 8px 12px;
-  border-radius: 8px;
-  border: 2px dashed #dadada;
-  display: grid;
-  grid-template-columns: repeat(2, max-content);
-  justify-content: center;
-  align-items: center;
-  column-gap: 10px;
-  transition: 0.1s ease-out;
-  cursor: pointer;
-}
-
-.payment .receipt-input:hover, .payment .receipt-input:focus-within {
-  border: 2px dashed #e20c18;
-  background: #fdf0f0;
-}
-
-.payment .receipt-input span {
-  font-family: "Poppins", sans-serif;
-}
-
-.payment input[type="file"] {
-  position: absolute;
-  height: 0px;
-  width: 0px;
-  pointer-events: none;
-}
-
-@media only screen and (max-width: 768px) {
-  * {
-    -webkit-tap-highlight-color: transparent !important;
-  }
-  nav {
-    height: 60px;
-  }
-  nav .logo, nav img {
-    width: 90px;
-  }
-  nav .nav-back span,
-  nav .nav-username span {
-    display: none;
-  }
-  nav .nav-back,
-  nav .nav-user {
-    width: 50px;
-  }
-  nav .nav-back {
-    left: 20px;
-  }
-  nav .nav-user {
-    right: 20px;
-  }
-  nav .nav-user i.fa-user-circle {
-    display: block;
-  }
-  nav .nav-user .fa-caret-down {
-    display: none;
-  }
-  nav .nav-user .user-dropdown {
-    right: 0px;
-  }
-  .container {
-    min-height: calc(100vh - 60px - 30px - 10vh) !important;
-    margin-top: calc(71px + 30px) !important;
-    padding-bottom: 0 !important;
-    grid-template-columns: min-content !important;
-    grid-template-rows: max-content max-content !important;
-  }
-  .container.row {
-    padding-bottom: 100px !important;
-  }
-  .card a.view-request,
-  .card button {
-    background: #f2f2f2 !important;
-    opacity: 1 !important;
-  }
-  .card a.view-request i,
-  .card button i {
-    font-size: 14px !important;
-  }
-  .card a.view-request:focus, .card a.view-request:focus-within,
-  .card button:focus,
-  .card button:focus-within {
-    background: #eee !important;
-  }
-  .card.form {
-    width: 220px !important;
-    padding: 28px 28px 20px 28px;
-  }
-  /*
- * Request view (payment)
-*/
-  .payment {
-    margin-bottom: 100px;
-    padding: 0px !important;
-  }
-  .payment .payment-info img {
-    height: 40px;
-  }
-  footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 10vh;
-  }
-}
-
-.toast-container {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  position: fixed;
-  left: 0;
-  bottom: 20px;
-  transform: translateY(10px);
-  opacity: 0;
-  z-index: -1;
-  transition: 0.1s ease-out;
-}
-
-.toast-container.active {
-  transform: translateY(0px);
-  opacity: 1;
-  z-index: 1;
-}
-
-.toast-container.active span {
-  user-select: unset;
-}
-
-.toast-container.active .toast button {
-  display: block;
-}
-
-.toast-container .toast {
-  height: max-content;
-  padding: 6px 8px 6px 22px;
-  display: flex;
-  align-items: center;
-  column-gap: 8px;
-  background: #fafafa;
-  border: 1px solid #ccc;
-  border-radius: 12px;
-  font-size: 15px;
-}
-
-.toast-container .toast .close-btn-container {
-  width: 25px;
-}
-
-.toast-container .toast button {
-  border-radius: 50%;
-  border: 1px solid #f8f8f8;
-  transition: 0.2s;
-  align-self: flex-end;
-  display: none;
-}
-
-.toast-container .toast button:hover, .toast-container .toast button:focus {
-  background: #fdf0f0;
-  color: #e20c18;
-  border: 1px solid #f9ced0;
-}
-
-.toast-container .toast button:active {
-  background: #f9ced0;
-  transition: 0.05s;
-}
-
-.toast-container .toast span {
-  user-select: none;
-}
-
-.toast-container .toast i {
-  padding: 6px 8px;
-  font-weight: 400;
-}
-
-.fab-container .fab {
-  width: 48px;
-  padding: 12px;
-  display: grid;
-  grid-template-columns: repeat(2, max-content);
-  align-items: center;
-  position: fixed;
-  right: 40px;
-  bottom: 40px;
-  background: dodgerblue;
-  border-radius: 50%;
-  z-index: 99;
-  transition: 0.35s cubic-bezier(0.39, 0.575, 0.565, 1);
-}
-
-.fab-container .fab:hover {
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.5);
-}
-
-.fab-container .fab.expanded {
-  padding: 12px 136px 12px 16px;
-  border-radius: 12px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-}
-
-.fab-container .fab.expanded span {
-  z-index: 1;
-  opacity: 1;
-  display: block;
-}
-
-.fab-container .fab span {
-  margin-left: 12px;
-  color: white;
-  z-index: -1;
-  opacity: 0;
-  pointer-events: none;
-  display: none;
-}
-
-.fab-container .fab i {
-  color: white;
-  font-size: 24px;
-}
-
-.fab-container .fab-actions {
-  display: grid;
-  grid-template-rows: max-content;
-  justify-items: end;
-  row-gap: 20px;
-  position: fixed;
-  right: 40px;
-  bottom: 110px;
-  transform: translateY(50px);
-  z-index: -1;
-  opacity: 0;
-  transition: 0.15s ease-out;
-}
-
-.fab-container .fab-actions.shown {
-  transform: translateY(0px);
-  z-index: 1;
-  opacity: 1;
-}
-
-.fab-container .fab-actions.shown button span {
-  color: black !important;
-}
-
-.fab-container .fab-actions button {
-  width: max-content;
-  padding: 8px 16px;
-  border-radius: 16px 16px 6px 16px;
-  background: white;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25);
-  opacity: 0;
-}
-
-.fab-container .fab-actions button span {
-  font-size: 15px;
-  color: white;
-}
-
-.scroll-btn {
-  height: 30px;
-  width: 30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  left: 50%;
-  transform: translateX(-50%);
-  bottom: 50px;
-  background: #fff;
-  border-radius: 50%;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.75);
-  opacity: 0;
-  z-index: -1;
-  pointer-events: none;
-  animation: scale-down 0.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-}
-
-.scroll-btn.shown {
-  opacity: 1;
-  z-index: 98;
-  pointer-events: unset;
-  animation: scale-up 0.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-}
-
-@keyframes scale-up {
-  0% {
-    transform: scale(0);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-
-@keyframes scale-down {
-  0% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(0);
-  }
-}
-
-body,
-nav {
-  transition: 0.1 ease-out;
-}
-
-.section {
-  opacity: 0;
-}
-
-.container {
-  min-height: calc(100vh - 70px - 100px - 10vh);
-  margin-top: calc(71px + 40px);
-  padding-bottom: 100px;
-  display: grid;
-  grid-template-columns: repeat(2, max-content);
-  justify-content: center;
-  column-gap: 50px;
-  row-gap: 40px;
-}
-
-.container.center {
-  margin-top: 71px !important;
-  align-content: center;
-}
-
-.container.row {
-  grid-template-rows: min-content;
-  grid-template-columns: unset;
-  justify-content: center;
-}
-
-.container .heading {
-  display: flex;
-  align-items: center;
-  column-gap: 20px;
-}
-
-.loading-screen {
-  height: calc(100% - 70px - 5vh);
-}
-
-* {
-  color: #ccc !important;
-}
-
 body.dark {
   background: black !important;
+}
+
+body.dark * {
+  color: #ccc !important;
 }
 
 body.dark nav,
