Fixed user dropdown position

--- a/css/student/student.css
+++ b/css/student/student.css
@@ -67,6 +67,7 @@ nav .nav-user i.fa-user-circle {
 nav .nav-user .user-dropdown {
   width: max-content;
   top: 60px;
+  right: 0px;
   padding: 12px 12px 16px 12px;
   display: flex;
   flex-direction: column;
@@ -149,7 +150,7 @@ nav img {
 
 @keyframes slide-down {
   0% {
-    transform: translateY(-40px);
+    transform: translateY(-20px);
   }
   100% {
     transform: translateY(0);
@@ -161,21 +162,7 @@ nav img {
     transform: translateY(0);
   }
   100% {
-    transform: translateY(-40px);
-  }
-}
-
-@media not all and (min-resolution: 0.001dpcm) {
-  .safari10 {
-    color: #0000ff;
-    background-color: #cccccc;
-  }
-}
-
-@media not all and (min-resolution: 0.001dpcm) {
-  .safari10 {
-    color: #0000ff;
-    background-color: #cccccc;
+    transform: translateY(-20px);
   }
 }
 
