--- a/css/student/_nav.scss
+++ b/css/student/_nav.scss
@@ -53,6 +53,7 @@ nav {
     .user-dropdown {
       width: max-content;
       top: 60px;
+      right: 0px;
       // margin: 220px 0 0 -70px;
       padding: 12px 12px 16px 12px;
       display: flex;
@@ -137,7 +138,7 @@ nav {
 
 @keyframes slide-down {
   0% {
-    transform: translateY(-40px);
+    transform: translateY(-20px);
   }
 
   100% {
@@ -151,24 +152,6 @@ nav {
   }
 
   100% {
-    transform: translateY(-40px);
-  }
-}
-
-@supports (-ms-ime-align: auto) {
-  .selector {
-  }
-}
-
-@media not all and (min-resolution: 0.001dpcm) {
-  .safari10 {
-    color: #0000ff;
-    background-color: #cccccc;
-  }
-}
-@media not all and (min-resolution: 0.001dpcm) {
-  .safari10 {
-    color: #0000ff;
-    background-color: #cccccc;
+    transform: translateY(-20px);
   }
 }
