--- a/css/student/_fab.scss
+++ b/css/student/_fab.scss
@@ -1,33 +1,38 @@
 .fab-container {
   .fab {
+    height: 48px;
     width: 48px;
     padding: 12px;
     display: grid;
-    grid-template-columns: repeat(2, max-content);
+    grid-template-columns: repeat(2, min-content);
     align-items: center;
+    align-content: center;
+    text-align: center;
     position: fixed;
     right: 40px;
     bottom: 40px;
-    background: dodgerblue;
+    background: white;
+    border: 1px solid #f3f3f3;
     border-radius: 50%;
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.25);
     z-index: 99;
-    transition: 0.35s cubic-bezier(0.39, 0.575, 0.565, 1);
+    transition: 0.3s cubic-bezier(0.39, 0.575, 0.565, 1);
+    overflow: hidden;
     &:hover {
-      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.5);
+      box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5);
     }
     &.expanded {
       padding: 12px 136px 12px 16px;
-      border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+      border-radius: 24px;
       span {
+        display: block;
         z-index: 1;
         opacity: 1;
-        display: block;
       }
     }
     span {
       margin-left: 12px;
-      color: white;
+      color: $red;
       z-index: -1;
       opacity: 0;
       pointer-events: none;
@@ -35,15 +40,16 @@
     }
 
     i {
-      color: white;
+      color: $red;
       font-size: 24px;
     }
   }
   .fab-actions {
     display: grid;
     grid-template-rows: max-content;
+    align-items: center;
     justify-items: end;
-    row-gap: 20px;
+    row-gap: 16px;
     position: fixed;
     right: 40px;
     bottom: 110px;
@@ -55,16 +61,13 @@
       transform: translateY(0px);
       z-index: 1;
       opacity: 1;
-      button span {
-        color: black !important;
-      }
     }
     button {
       width: max-content;
       padding: 8px 16px;
       border-radius: 16px 16px 6px 16px;
-      background: white;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25);
+      background: $red;
+      box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.25);
       opacity: 0;
       span {
         font-size: 15px;
